Updated name to "Mock Job Portal"

--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
   <head>
-    <title>Neel's Job Board</title>
+    <title>Mock Job Board</title>
     <link rel="stylesheet" type="text/css" href="app.css">
   </head>
   <body>
     <header>
-      <a style="text-decoration:none" href="index.html"><h1>Neel's Job Board</h1></a>
+      <a style="text-decoration:none" href="index.html"><h1>Mock Job Board</h1></a>
     </header>
     <form>
       <label for="keywords">Search by Keywords:</label>
